# anaerobic-design-mcp

./: .gitignore  .mcp.json  ANALYSIS_INDEX.md  BACKGROUND_JOB_FAQ.md  BACKGROUND_JOB_INDEX.md  BACKGROUND_JOB_PATTERN.md  BACKGROUND_JOB_QUICK_START.md  BUG_FIXES_SUMMARY.md  BUG_FIXES_UPSTREAM_RECONCILIATION.md  BUG_TRACKER.md  CLAUDE.md  CLEANUP_RECOMMENDATIONS.md  CODEBASE_ANALYSIS.md  COD_BALANCE_DIAGNOSTIC.md  CONSOLIDATION_QUICK_REFERENCE.md  DETAILED_FINDINGS.md  DIGESTER_DIAGNOSIS.md  DOCUMENTATION_CONSOLIDATION_REPORT.md  FINAL_WORKFLOW_TEST_REPORT.md  IMPLEMENTATION_PLAN.md  ISSUES_LOG.md  LICENSE  PUSH_SUMMARY.md  README.md  README_ANALYSIS.txt  README_DOCUMENTATION.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  REFACTOR_SUMMARY.md  VALIDATOR_TEST_RESULTS.md  WATERTAP_VALIDATION_UPGRADE.md  WORKFLOW_TEST_BUGS.md  WORKFLOW_TEST_RESULTS.md  WORKFLOW_TEST_SUMMARY.md  adm1_state.json  adm1_state_calc.json  adm1_state_cleaned.json  adm1_state_improved.json  adm1_state_scaled.json  adm1_state_tuned.json  (+97 more)
.madm1env/: pyvenv.cfg
core/: __init__.py  models.py  state.py  subprocess_runner.py  utils.py
docs/: INDEX.md  TEST_FILE_ANALYSIS.md  VALIDATION_CLEANUP_SUMMARY.md  qsdsan_sulfur_attribution.md
reports/: markdown_report.py
tests/: __init__.py  test_qsdsan_simulation_basic.py  test_regression_catastrophe.py
tools/: __init__.py  basis_of_design.py  chemical_dosing.py  process_health.py  simulation.py  sizing.py  state_management.py  stream_details.py  sulfur_balance.py  validation.py
utils/: __init__.py  adm1_validation.py  anaerobic_cstr_madm1.py  (+37 more)
(+28 files in other folders)
